missing api-ms-win-crt-runtime-l1-1-0-dll make sure your machine
has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.

Additionally, if you see a black screen, start Mnemosyne with the
--qt-opengl=desktop command line argument.)

Mnemosyne 2.6.1

- Fix crash in the review server (reported by Dorian Hawkmoon).
- Fix interaction between Unicode and Latex (reported by vycska).
- Work around progress bars which don't close under Linux (fix by
  Emilian Mihalache).


Mnemosyne 2.6 : 2017-12-11

- Import of Anki databases (both *.anki2 and *.apgk) as well as
  possibility to edit these M-sided card types (though not yet in a way
  that would change the number of sister cards).
- Fix display of question in the card browser in case you configured
  Mnemosyne to show question and answer in the same window.
- Fix bugs with increase of non-latin fonts (reported by JDD annd Scott
  Youngman).
- Fix cornercase bug in RTL handler (reported by Fonzo99).
- Upgrade to latest version of libraries (PyQt, Python, Matplotlib).
- Improve keyboard shortcuts (reported by Scott Youngman).
- Fixes to the behaviour of the Edit dialog of the Card Browser (reported by
  Scott Youngman).
- Also save window size when exiting window by pressing escape (reported by
  Scott Youngman).
- Fix display of map cards when showing Q and A in the same box (reported by
  Scott Youngman).
- Disallow renaming a single tag to multiple tags in the tag tree widget.
  (reported by abacus).
- In case you get crashes in the browser when trying to display only untagged
  cards, you can now run 'File - Compact - Defragment database' to fix this
  (reported by abacus).
- Fix crash in headless server.
- Fix crashes when running separate scripts (patch by Julian Mehne).


Mnemosyne 2.5 : 2017-06-26

-New feature: Study Modes, allowing you to e.g. only study unlearned