@@ -52,7 +52,10 @@ class SM2Mnemosyne(Scheduler):
 
         # Create a time tuple containing the local date only, i.e. throwing
         # away hours, minutes, etc.
-        date_only = datetime.date.fromtimestamp(timestamp).timetuple()
+        try:
+            date_only = datetime.date.fromtimestamp(timestamp).timetuple()
+        except Exception as e:
+            self.main_widget().show_error(str(timestamp) + str(e))
         # Now we reinterpret this same time tuple as being UTC and convert it
         # to a POSIX timestamp. (Note that timetuples are 'naive', i.e. they
         # themselves do not contain timezone information.)
