@@ -11,10 +11,14 @@ Additionally, if you see a black screen, start Mnemosyne with the
 
 Mnemosyne 2.6.1
 
+- Fix bug with Mnemosyne not remembering the setting of "Recent cards
+  are cards with at most X retention repetitions" (reported by Lenore
+  Raven).
 - Fix crash in the review server (reported by Dorian Hawkmoon).
 - Fix interaction between Unicode and Latex (reported by vycska).
 - Work around progress bars which don't close under Linux (fix by
   Emilian Mihalache).
+- Upgraded to PyQt 5.10.1 and matplotlib 2.2.2 under Windows.
 
 
 Mnemosyne 2.6 : 2017-12-11
